# AresEngine

./: .gitignore  CheckList.txt  LICENSE  Project.filters  Project.sln  Project.vcxproj  Project.vcxproj.filters  README.md  THINK  TODO
Application/: Application.sln  Main.cpp  Resource.h  Resource.rc  WGLExtensions.h  stdafx.h
Application/Android/app/: CMakeLists.txt  build.gradle
Application/Android/app/src/androidTest/java/com/engine/application/: ExampleInstrumentedTest.java
Application/Android/app/src/main/: AndroidManifest.xml
Application/Android/app/src/main/cpp/: MemTest.cpp  native-lib.cpp
Application/Android/app/src/main/cpp/eastl/: new.cpp
Application/Android/app/src/main/cpp/nvwa/: debug_new.cpp  debug_new.h  fast_mutex.h
Application/Android/app/src/main/java/com/engine/application/: MainActivity.java  MainRenderer.java  MainView.java
Application/Android/app/src/test/java/com/engine/application/: ExampleUnitTest.java
Application/Application/: Application.vcxproj  main.cpp
Application/Windows/: Application.sln  Application.vcxproj  Application.vcxproj.filters  Main.cpp  Resource.h  Resource.rc  WGLExtensions.cpp  stdafx.cpp  stdafx.h
Documents/: Allocator.xlsx  TaskGraph.xlsx  关于DrawElement, DrawInstance, DrawIndirect.txt  关于DrawInstance.txt  关于合批.txt
Engine/: Application.h  BaseHeader.h  ConsoleHeader.h  Define.h  Engine.cpp  Engine.h  EngineHeader.h  GfxHeader.h  ImGUIHeader.h  Platform.h  PreHeader.h  RenderHeader.h  SceneHeader.h  UtilsHeader.h
Engine/Base/: ComponentManager.h  Define.h  Delegate.h  File.cpp  File.h  FileManager.cpp  FileManager.h  Mutex.cpp  Mutex.h  SharedPtr.h  Stream.h  TaskGraph.cpp  TaskGraph.h  Utils.cpp  Utils.h
Engine/Framework/: Application.h  main.cpp
Engine/Memory/: Allocator.cpp  Allocator.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryHeap.cpp  MemoryPool.cpp  MemorySystem.cpp
Engine/RenderSolution/: RenderSolutionBase.cpp  RenderSolutionBase.h  RenderSolutionDefault.cpp  RenderSolutionDefault.h  RenderSolutionDeferred.cpp  RenderSolutionDeferred.h  RenderSolutionForward.cpp  RenderSolutionForward.h  RenderSolutionForwardPlus.cpp  RenderSolutionForwardPlus.h
Engine/Scene/: Scene.cpp  Scene.h  SceneDefinition.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
Engine/Shader/: ColorGrading.material  Compile.bat  CompileGLES.bat  Env.dds  PassAdd.material  PassAutoExposure.material  PassBlend.material  PassBlendAdd.material  PassBlur.material  PassBlurBox.material  PassBlurHorizontal.material  PassBlurVertical.material  PassColorGrading.material  PassCopy.material  PassCopyColor.material  PassCopyDepthStencil.material  PassDeferredShading.material  PassDeferredShading_Back.material  PassDeferredShading_Front.material  PassDeferredShading_Tile.material  PassFinal.material  PassLuminanceThreshold.material  SSAO.material  (+13 more)
Project/: ndk_build.bat  ndk_build_pause.bat
(+1738 files in other folders)
